[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.3" }
rust_decimal = { version = "1.35" }
rust_decimal_macros = { version = "1.35" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = { version = "1.0" }
